2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/MinGW-3.4/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/SunStudio-8/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualC++.NET-2003/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2005/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2008/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-2.95/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-3.3-apple/config-public-compiler.h_strict,
 config/sample-headers/compiler/gcc-3.3-apple/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-3.3/config-public-compiler.h_strict,
 config/sample-headers/compiler/gcc-3.3/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-4.2/pqxx/config-public-compiler.h,
 configitems, configure, configure.ac, configure.ac.in, doc/Doxyfile.in,
 include/pqxx/basic_connection.hxx, include/pqxx/binarystring.hxx,
 include/pqxx/compiler-internal.hxx, include/pqxx/compiler-public.hxx,
 include/pqxx/config.h.in, include/pqxx/connection.hxx,
 include/pqxx/connection_base.hxx, include/pqxx/connectionpolicy.hxx,
 include/pqxx/cursor.hxx, include/pqxx/dbtransaction.hxx,
 include/pqxx/errorhandler.hxx, include/pqxx/except.hxx, include/pqxx/field.hxx,
 include/pqxx/internal/gates/connection-parameterized_invocation.hxx,
 include/pqxx/internal/gates/connection-pipeline.hxx,
 include/pqxx/internal/gates/connection-prepare-invocation.hxx,
 include/pqxx/internal/gates/connection-transaction.hxx,
 include/pqxx/internal/gates/result-creation.hxx,
 include/pqxx/internal/gates/transaction-tablereader.hxx,
 include/pqxx/internal/gates/transaction-tablewriter.hxx,
 include/pqxx/internal/gates/transaction-transactionfocus.hxx,
 include/pqxx/internal/result_data.hxx,